--- a/branch/1.1.0a/Codigo-Fonte/visualizador/android/wargen/res/layout/tela_login.xml
+++ b/branch/1.1.0a/Codigo-Fonte/visualizador/android/wargen/res/layout/tela_login.xml
@@ -43,7 +43,7 @@
         android:layout_width="279dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:onClick="fazerLogin"
+        android:onClick="fazerLoginClick"
         android:text="Entrar" />
 
 </LinearLayout>
