--- a/branch/1.1.0a/Codigo-Fonte/visualizador/android/wargen/res/layout/tela_principal.xml
+++ b/branch/1.1.0a/Codigo-Fonte/visualizador/android/wargen/res/layout/tela_principal.xml
@@ -1,8 +1,9 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ScrollView1"
+    android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".PrincipalActivity" >
 
     <TextView
@@ -12,4 +13,4 @@
         android:text=""
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
-</ScrollView>
+</LinearLayout>
